--- a/spring-security-jwt/pom.xml
+++ b/spring-security-jwt/pom.xml
@@ -42,6 +42,12 @@
             <version>5.2.10.Final</version>
             <scope>provided</scope>
         </dependency>
+
+        <!--jpa的jar包 ，操作数据库的，类似hibernate-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
